--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <provider
+            android:authorities="com.example.android.fivewaystocookeggs"
+            android:name=".data.RecipeProvider" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +20,6 @@
         </activity>
         <activity android:name=".RecipeActivity"
             android:parentActivityName=".MainActivity">
-
         </activity>
     </application>
 
